--- a/client/package.json
+++ b/client/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "webrtc_share",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emoji": "^0.5.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
+    "react-select": "^5.2.2",
+    "socket.io-client": "^4.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
